--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "build": "npm install",
     "test": "jest",
     "demo": "node demo.js",
     "generate-token": "node utils/authHelper.js",
